hotfix: re-foldering entities proto
