# pkg/models/converters/asmaul_husna_converter.go
@@ -1,7 +1,7 @@
 package converters
 
 import (
-	entities "asmaul-husna/pkg/entities/generated"
+	entities "asmaul-husna/pkg/entities"
 	"asmaul-husna/pkg/models/responses"
 )
 
